--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: cpp
+language: generic
 
 sudo: required
 
@@ -10,16 +10,17 @@ script:
 
 env:
     - DOCKER_IMAGE=centos:7
+    - DOCKER_IMAGE=fedora:28
     - DOCKER_IMAGE=fedora:27
     - DOCKER_IMAGE=fedora:26
 
 before_deploy:
-    - openssl aes-256-cbc -K $encrypted_2a06824dcee9_key -iv $encrypted_2a06824dcee9_iv -in .copr.enc -out .copr -d
+    - openssl aes-256-cbc -K $encrypted_c41dfc44ee5b_key -iv $encrypted_c41dfc44ee5b_iv -in .copr.enc -out .copr -d
 
 deploy:
     skip_cleanup: true
     provider: script
-    script: docker run -v ${TRAVIS_BUILD_DIR}:/root/src/ -w /root/src/ fedora:latest /bin/sh -c "dnf install -y copr-cli && copr-cli --config .copr build --nowait edigiacomo/test Magics.spec"
+    script: docker run -v ${TRAVIS_BUILD_DIR}:/root/src/ -w /root/src/ fedora:latest /bin/sh -c "dnf install -y copr-cli && copr-cli --config .copr build --nowait simc/stable Magics.spec"
     on:
         branch: master
         condition: $DOCKER_IMAGE = centos:7
