--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
 - DOCKER_IMAGE=centos:8
 - DOCKER_IMAGE=fedora:32
 - DOCKER_IMAGE=fedora:33
+- DOCKER_IMAGE=fedora:34
 - DOCKER_IMAGE=fedora:rawhide
 matrix:
   allow_failures:
@@ -18,7 +19,7 @@ before_deploy:
 deploy:
   skip_cleanup: true
   provider: script
-  script: docker run -v ${TRAVIS_BUILD_DIR}:/root/src/ -w /root/src/ fedora:latest /bin/sh -c "dnf install -y copr-cli && copr-cli --config .copr build --chroot epel-8-x86_64 --chroot fedora-32-x86_64 --chroot fedora-33-x86_64 --nowait simc/stable Magics.spec"
+  script: docker run -v ${TRAVIS_BUILD_DIR}:/root/src/ -w /root/src/ fedora:latest /bin/sh -c "dnf install -y copr-cli && copr-cli --config .copr build --chroot epel-8-x86_64 --chroot fedora-32-x86_64 --chroot fedora-33-x86_64 --chroot fedora-34-x86_64 --nowait simc/stable Magics.spec"
   true:
     branch: master
     condition: $DOCKER_IMAGE = centos:8
